# gui-python-pygobject-gtk4

./: pyproject.toml  requirements-dev.txt  requirements.txt
docs/data/: requirements-doc.txt
docs/source/: extra.rst  gtk-4-libadwaita-widgets.rst  index.rst
examples/tasks/: README.md  README_en.md
examples/tasks/src/: MainWindow.py  main.py
examples/tasks/src/database/: ConnectSQLite.py  data.sqlite3
examples/tasks/src/widgets/: DialogAddTask.py  DialogDeleteTask.py  DialogEditTask.py  DialogEditTask.py.old
src/gtk4-libadwaita-widgets/combo-row/: MainWindow.py
src/gtk4-libadwaita-widgets/combo-row/ui/: MainWindow.py  MainWindow.ui
src/gtk4-libadwaita-widgets/message-dialog/: MainWindow.py
src/gtk4-libadwaita-widgets/message-dialog/ui/: MainWindow.py  MainWindow.ui
src/gtk4-libadwaita-widgets/password-entry-row/: MainWindow.py
src/gtk4-libadwaita-widgets/password-entry-row/ui/: MainWindow.blp  MainWindow.py  MainWindow.ui
