[tool.poetry]
name = "gui-python-pygobject-gtk4"
version = "0.2.1"
description = "Criando interfaces gráficas com a linguagem de programação Python (PyGObject) e o toolkit gráfico Gtk 4"
authors = ["Renato Cruz <zkpcvm6dz@mozmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://gtk.justcode.com.br/"
documentation = "https://gtk.justcode.com.br/"
repository = "https://github.com/natorsc/gui-python-pygobject-gtk4"
keywords = ["python", "pygobject", "gtk", "gtk 4", "libadwaita", "blueprint", "gnome", "gnome builder"]

classifiers = [
    "Topic :: Software Development",
    "Topic :: Desktop Environment",
    "Topic :: Desktop Environment :: Gnome",
    "Environment :: X11 Applications :: GTK",
    "Environment :: X11 Applications :: Gnome",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pygobject = "^3.42.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.1"
autopep8 = "^2.0.1"
pygobject-stubs = "^2.2.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"
sphinx-copybutton = "^0.5.1"
sphinx-inline-tabs = "^2022.1.2b11"
sphinxext-opengraph = "^0.7.5"
sphinx-sitemap = "^2.5.0"
furo = "^2022.12.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
